fix: fix gap and add new product

--- a/online-store/src/styles/components/storePage.css
+++ b/online-store/src/styles/components/storePage.css
@@ -11,6 +11,8 @@
 .products__list {
     margin-top: 25px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+    column-gap: 19px;
+    row-gap: 25px;
 }
